syntax = "proto3";

option csharp_namespace = "AElf.Execution";

import "common.proto";
import "kernel.proto";

message TransactionTraceMessage
{
    int64 RequestId = 1;
    repeated TransactionTrace TransactionTraces = 2;
}
